@@ -20,31 +20,12 @@
  */
 package org.apache.tiles.request.freemarker.autotag;
 
-import static org.easymock.EasyMock.*;
-import static org.junit.Assert.*;
-
-import java.io.IOException;
-import java.io.Writer;
-import java.util.HashMap;
-import java.util.Map;
-import javax.servlet.GenericServlet;
-import javax.servlet.ServletContext;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import org.apache.tiles.autotag.core.runtime.ModelBody;
-import org.apache.tiles.request.ApplicationAccess;
-import org.apache.tiles.request.ApplicationContext;
-import org.apache.tiles.request.Request;
-import org.apache.tiles.request.freemarker.FreemarkerRequest;
-import org.apache.tiles.request.freemarker.autotag.FreemarkerAutotagRuntime;
-import org.apache.tiles.request.freemarker.autotag.FreemarkerModelBody;
-import org.junit.Test;
 import freemarker.core.Environment;
 import freemarker.core.Macro;
-import freemarker.ext.servlet.FreemarkerServlet;
-import freemarker.ext.servlet.HttpRequestHashModel;
-import freemarker.ext.servlet.ServletContextHashModel;
+import freemarker.ext.jakarta.servlet.FreemarkerServlet;
+import freemarker.ext.jakarta.servlet.HttpRequestHashModel;
+import freemarker.ext.jakarta.servlet.ServletContextHashModel;
+import freemarker.template.Configuration;
 import freemarker.template.ObjectWrapper;
 import freemarker.template.Template;
 import freemarker.template.TemplateDirectiveBody;
@@ -52,17 +33,39 @@ import freemarker.template.TemplateHashModel;
 import freemarker.template.TemplateModel;
 import freemarker.template.TemplateModelException;
 import freemarker.template.TemplateNumberModel;
+import jakarta.servlet.GenericServlet;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import org.apache.tiles.autotag.core.runtime.ModelBody;
+import org.apache.tiles.request.ApplicationAccess;
+import org.apache.tiles.request.ApplicationContext;
+import org.apache.tiles.request.Request;
+import org.apache.tiles.request.freemarker.FreemarkerRequest;
+import org.junit.jupiter.api.Test;
+
+import java.io.Writer;
+import java.util.HashMap;
+import java.util.Map;
+
+import static org.easymock.EasyMock.createMock;
+import static org.easymock.EasyMock.eq;
+import static org.easymock.EasyMock.expect;
+import static org.easymock.EasyMock.replay;
+import static org.easymock.EasyMock.verify;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 /**
  * Tests {@link FreemarkerAutotagRuntime}.
  *
  * @version $Rev$ $Date$
  */
-public class FreemarkerAutotagRuntimeTest {
+class FreemarkerAutotagRuntimeTest {
 
     @Test
-    public void testCreateRequest() throws IOException, TemplateModelException{
-        @SuppressWarnings("unchecked")
+    void testCreateRequest() throws TemplateModelException {
         Map<String, TemplateModel> params = createMock(Map.class);
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
@@ -74,8 +77,12 @@ public class FreemarkerAutotagRuntimeTest {
         ApplicationContext applicationContext = createMock(ApplicationContext.class);
         HttpServletRequest httpServletRequest = createMock(HttpServletRequest.class);
         HttpServletResponse httpServletResponse = createMock(HttpServletResponse.class);
+        Configuration configuration = createMock(Configuration.class);
 
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
         expect(servlet.getServletContext()).andReturn(servletContext)
                 .anyTimes();
         expect(
@@ -84,7 +91,7 @@ public class FreemarkerAutotagRuntimeTest {
                 .andReturn(applicationContext);
 
         replay(servlet, wrapper, servletContext, applicationContext,
-                httpServletRequest, httpServletResponse);
+                httpServletRequest, httpServletResponse, configuration);
         ServletContextHashModel servletContextHashModel = new ServletContextHashModel(
                 servlet, wrapper);
         HttpRequestHashModel httpRequestHashModel = new HttpRequestHashModel(
@@ -103,7 +110,7 @@ public class FreemarkerAutotagRuntimeTest {
 
         runtime.execute(env, params, new TemplateModel[0], body);
         Request request = runtime.createRequest();
-        assertTrue(request instanceof FreemarkerRequest);
+        assertInstanceOf(FreemarkerRequest.class, request);
         verify(servlet, wrapper, servletContext, applicationContext,
                 httpServletRequest, httpServletResponse,
                 template, rootDataModel, out,
@@ -111,35 +118,41 @@ public class FreemarkerAutotagRuntimeTest {
     }
 
     @Test
-    public void testCreateModelBody() {
+    void testCreateModelBody() {
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
+        Configuration configuration = createMock(Configuration.class);
         Writer out = createMock(Writer.class);
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
-        replay(template, rootDataModel, out);
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
+        replay(template, rootDataModel, out, configuration);
         Environment env = new Environment(template, rootDataModel, out);
-        @SuppressWarnings("unchecked")
         Map<String, TemplateModel> params = createMock(Map.class);
         TemplateDirectiveBody body = createMock(TemplateDirectiveBody.class);
         replay(params, body);
         FreemarkerAutotagRuntime runtime = new FreemarkerAutotagRuntime();
         runtime.execute(env, params, new TemplateModel[0], body);
         ModelBody modelBody = runtime.createModelBody();
-        assertTrue(modelBody instanceof FreemarkerModelBody);
-        verify(template, rootDataModel, out, params, body);
+        assertInstanceOf(FreemarkerModelBody.class, modelBody);
+        verify(template, rootDataModel, out, params, body, configuration);
     }
 
     @Test
-    public void testGetParameter() throws TemplateModelException {
+    void testGetParameter() throws TemplateModelException {
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
+        Configuration configuration = createMock(Configuration.class);
         Writer out = createMock(Writer.class);
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
-        replay(template, rootDataModel, out);
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
+        replay(template, rootDataModel, out, configuration);
         Environment env = new Environment(template, rootDataModel, out);
         TemplateNumberModel model = createMock(TemplateNumberModel.class);
-        expect(model.getAsNumber()).andReturn(new Integer(42)).anyTimes();
-        @SuppressWarnings("unchecked")
+        expect(model.getAsNumber()).andReturn(Integer.valueOf(42)).anyTimes();
         Map<String, TemplateModel> params = createMock(Map.class);
         TemplateDirectiveBody body = createMock(TemplateDirectiveBody.class);
         expect(params.get(eq("notnullParam"))).andReturn(model).anyTimes();
@@ -149,12 +162,12 @@ public class FreemarkerAutotagRuntimeTest {
         runtime.execute(env, params, new TemplateModel[0], body);
         Object notnullParam = runtime.getParameter("notnullParam", Object.class, null);
         Object nullParam = runtime.getParameter("nullParam", Object.class, null);
-        int notnullParamDefault = runtime.getParameter("notnullParam", Integer.class, new Integer(24));
-        int nullParamDefault = runtime.getParameter("nullParam", Integer.class, new Integer(24));
+        int notnullParamDefault = runtime.getParameter("notnullParam", Integer.class, Integer.valueOf(24));
+        int nullParamDefault = runtime.getParameter("nullParam", Integer.class, Integer.valueOf(24));
         assertEquals(42, notnullParam);
-        assertEquals(null, nullParam);
+        assertNull(nullParam);
         assertEquals(42, notnullParamDefault);
         assertEquals(24, nullParamDefault);
-        verify(template, rootDataModel, out, model, params, body);
+        verify(template, rootDataModel, out, model, params, body, configuration);
     }
 }
